--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "prueba caambio "
+    "prueba caambio \n",
+    "ultima prueba"
    ]
   }
  ],
